--- a/business.html
+++ b/business.html
@@ -6,15 +6,55 @@
     <title>사업영역 | GOZIP</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css">
     <style>
-        :root { --main-green: #79B933; --bg-light: #f8fbf4; }
+        :root { 
+            --main-green: #79B933; 
+            --bg-light: #f8fbf4; 
+            --kakao-yellow: #FEE500; 
+            --kakao-brown: #3C1E1E;
+        }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Pretendard', sans-serif; }
         body { line-height: 1.6; color: #333; background-color: #fff; }
         
-        /* 네비게이션 */
-        nav { background: white; padding: 20px 50px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
+        /* 네비게이션 (index/about과 통일) */
+        nav { 
+            background: white; 
+            padding: 20px 50px; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1); 
+            position: sticky; 
+            top: 0; 
+            z-index: 1000; 
+        }
         .logo a { text-decoration: none; color: #333; font-size: 24px; font-weight: 900; }
-        .menu a { margin-left: 25px; text-decoration: none; color: #333; font-weight: 500; font-size: 15px; }
-        .btn-green { background: var(--main-green); color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
+        .menu { display: flex; align-items: center; }
+        .menu a { margin-left: 20px; text-decoration: none; color: #333; font-weight: 600; font-size: 15px; }
+
+        /* 카카오 & 발주 버튼 스타일 */
+        .btn-kakao { 
+            background: var(--kakao-yellow); 
+            color: var(--kakao-brown) !important; 
+            padding: 10px 22px; 
+            border-radius: 50px; 
+            font-weight: 800;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+            transition: 0.3s;
+        }
+        .btn-kakao:hover { transform: scale(1.05); }
+
+        .btn-green { 
+            background: var(--main-green); 
+            color: white !important; 
+            padding: 10px 25px; 
+            border-radius: 50px; 
+            font-weight: bold; 
+            transition: 0.3s;
+        }
+        .btn-green:hover { background: #66a128; }
 
         /* 히어로 섹션 */
         .page-header { background: var(--bg-light); padding: 100px 20px; text-align: center; }
@@ -64,11 +104,18 @@
         .service-card .tags { margin-top: 25px; display: flex; flex-wrap: wrap; gap: 8px; }
         .service-card .tag { background: #f0f4eb; padding: 5px 14px; border-radius: 50px; font-size: 13px; color: var(--main-green); font-weight: 600; }
 
-        /* 푸터 */
+        /* 푸터 (왼쪽 정렬 유지) */
         footer { background: #000; color: #fff; padding: 60px 0; margin-top: 100px; text-align: left; }
         .footer-container { max-width: 1200px; margin: 0 auto; padding: 0 50px; }
         .footer-info h3 { font-size: 18px; font-weight: 800; margin-bottom: 20px; }
         .footer-info p { font-size: 14px; color: #999; line-height: 1.8; margin-bottom: 4px; }
+
+        /* 모바일 대응 */
+        @media (max-width: 768px) {
+            nav { padding: 15px 20px; }
+            .menu a:not(.btn-green):not(.btn-kakao) { display: none; }
+            .page-header h1 { font-size: 32px; }
+        }
     </style>
 </head>
 <body>
@@ -78,6 +125,9 @@
         <div class="menu">
             <a href="about.html">회사소개</a>
             <a href="business.html" style="color:var(--main-green); font-weight:bold;">사업영역</a>
+            <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">
+                <span style="font-size: 18px;">💬</span> 오픈채널 참여하기
+            </a>
             <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" rel="noopener noreferrer" class="btn-green">발주플랫폼 바로가기</a>
         </div>
     </nav>
@@ -153,7 +203,7 @@
                 <p>경상북도 영천시 대전강변길 169-9</p>
                 <p>Tel. 010-5207-1133 | E. ys.kim@thejain.co.kr</p>
                 <p>사업자번호 749-87-02443</p>
-                <p style="margin-top: 30px; font-size: 12px; color: #555;">© 2024 GOZIP. All Rights Reserved.</p>
+                <p style="margin-top: 30px; font-size: 12px; color: #555;">© 2022 GOZIP. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
