--- a/business.html
+++ b/business.html
@@ -129,7 +129,7 @@
             <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">
                 <span style="font-size: 18px;">💬</span> 오픈채널 참여하기
             </a>
-            <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" rel="noopener noreferrer" class="btn-green">발주플랫폼 바로가기</a>
+            <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" rel="noopener noreferrer" class="btn-green">발주플랫폼</a>
         </div>
     </nav>
 
