--- a/about.html
+++ b/about.html
@@ -126,48 +126,43 @@
 
         /* 모바일 대응 */
        @media (max-width: 768px) {
-    /* 상단바를 세로 2단으로 구성 */
-    nav { 
-        padding: 10px 10px !important; 
-        flex-direction: column !important; 
-        background: rgba(0,0,0,0.85) !important; /* 배경을 약간 어둡게 해서 메뉴 글자 강조 */
-    }
-    nav.scrolled { background: white !important; }
+        nav { 
+            padding: 10px !important; 
+            flex-direction: column !important; 
+            background: rgba(0,0,0,0.85) !important; /* 배경을 어둡게 해서 글자 부각 */
+            display: flex !important;
+        }
+        .logo { margin-bottom: 10px !important; }
+        .logo h2 { color: white !important; } /* 로고 흰색 */
 
-    .logo { margin-bottom: 8px !important; }
-
-    /* 메뉴 4개를 가로로 나란히 배치 */
-    .menu { 
-        display: flex !important; 
-        width: 100% !important; 
-        justify-content: center !important; 
-        gap: 4px !important; 
+        .menu { 
+            display: flex !important; 
+            justify-content: center !important; 
+            gap: 8px !important;
+            width: 100% !important;
+        }
+        /* 메뉴 글자색을 강제로 흰색 고정 */
+        .menu a { 
+            margin: 0 !important; 
+            color: white !important; 
+            font-size: 13px !important; 
+            font-weight: 600 !important;
+        }
+        .btn-kakao { background: #FEE500 !important; color: #3C1E1E !important; }
+        .btn-green { background: #79B933 !important; color: white !important; }
     }
-
-    /* 메뉴 글자 크기 및 간격 조정 */
-    .menu a { 
-        margin: 0 !important; 
-        font-size: 11px !important; 
-        padding: 5px 7px !important; 
-        white-space: nowrap !important; 
-    }
-    
-    /* 카카오/발주 버튼 크기 조정 */
-    .btn-kakao, .btn-green { 
-        padding: 6px 10px !important; 
-        font-size: 11px !important; 
-    }
-}
     </style>
 </head>
 <body>
 
 <nav id="navbar">
-    <div class="logo"><h2>GOZIP</h2></div>
+    <div class="logo">
+        <a href="index.html" style="color: inherit; text-decoration: none;"><h2>GOZIP</h2></a>
+    </div>
     <div class="menu">
         <a href="about.html">회사소개</a>
         <a href="business.html">사업영역</a>
-        <a href="https://open.kakao.com/o/링크" target="_blank" class="btn-kakao">💬 오픈채널</a>
+        <a href="https://open.kakao.com/o/링크수정" target="_blank" class="btn-kakao">💬 오픈채널</a>
         <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" class="btn-green">발주플랫폼</a>
     </div>
 </nav>
