--- a/business.html
+++ b/business.html
@@ -112,48 +112,44 @@
 
         /* 모바일 대응 */
         @media (max-width: 768px) {
-    /* 네비게이션을 세로 2단으로 변경 */
-    nav { 
-        padding: 10px 10px !important; 
-        flex-direction: column !important; 
-        background: rgba(0,0,0,0.8) !important; /* 모바일 가독성용 배경 */
-    }
-    nav.scrolled { background: white !important; }
+        nav { 
+            padding: 10px !important; 
+            flex-direction: column !important; 
+            background: #111111 !important; /* 아예 검정 배경으로 고정 */
+            display: flex !important;
+            height: auto !important;
+        }
+        .logo { margin-bottom: 10px !important; }
+        .logo h2 { color: white !important; }
 
-    .logo { margin-bottom: 8px !important; }
-
-    /* 메뉴들을 한 줄에 꽉 차게 배치 */
-    .menu { 
-        display: flex !important; 
-        width: 100% !important; 
-        justify-content: center !important; 
-        gap: 5px !important; 
+        .menu { 
+            display: flex !important; 
+            justify-content: center !important; 
+            gap: 6px !important;
+            width: 100% !important;
+            visibility: visible !important; /* 안 보이는 현상 방지 */
+        }
+        .menu a { 
+            margin: 0 !important; 
+            color: white !important; 
+            font-size: 12px !important; 
+            padding: 5px !important;
+        }
+        .btn-kakao { background: #FEE500 !important; color: #3C1E1E !important; }
+        .btn-green { background: #79B933 !important; color: white !important; }
     }
-
-    /* 글자 크기 살짝 줄여서 안 겹치게 */
-    .menu a { 
-        margin: 0 !important; 
-        font-size: 12px !important; 
-        padding: 5px 8px !important; 
-        white-space: nowrap !important; 
-    }
-    
-    /* 버튼들 크기 조정 */
-    .btn-kakao, .btn-green { 
-        padding: 6px 10px !important; 
-        font-size: 11px !important; 
-    }
-}
-    </style>
+</style>
 </head>
 <body>
 
-    <nav id="navbar">
-    <div class="logo"><h2>GOZIP</h2></div>
+<nav id="navbar">
+    <div class="logo">
+        <a href="index.html" style="color: inherit; text-decoration: none;"><h2>GOZIP</h2></a>
+    </div>
     <div class="menu">
         <a href="about.html">회사소개</a>
         <a href="business.html">사업영역</a>
-        <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">💬 오픈채널</a>
+        <a href="https://open.kakao.com/o/링크수정" target="_blank" class="btn-kakao">💬 오픈채널</a>
         <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" class="btn-green">발주플랫폼</a>
     </div>
 </nav>
