--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
     <div class="menu">
         <a href="about.html">회사소개</a>
         <a href="business.html">사업영역</a>
-        <a href="https://open.kakao.com/o/링크수정" target="_blank" class="btn-kakao">💬 오픈채널</a>
+        <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">💬 오픈채널</a>
         <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" class="btn-green">발주플랫폼</a>
     </div>
 </nav>
