--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853246592"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17853246592');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>온라인 이커머스 1등 '최고집'입니다</title>
@@ -120,8 +130,8 @@
     <nav id="navbar">
     <div class="logo"><h2>GOZIP</h2></div>
     <div class="menu">
-        <a href="about.html">회사소개</a>
-        <a href="business.html">사업영역</a>
+        <a href="about">회사소개</a>
+        <a href="business">사업영역</a>
         <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">💬 오픈채널</a>
         <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" class="btn-green">발주플랫폼</a>
     </div>
