--- a/business.html
+++ b/business.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853246592"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17853246592');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사업영역 | GOZIP</title>
@@ -147,8 +156,8 @@
         <a href="index.html" style="color: inherit; text-decoration: none;"><h2>GOZIP</h2></a>
     </div>
     <div class="menu">
-        <a href="about.html">회사소개</a>
-        <a href="business.html">사업영역</a>
+        <a href="aboutl">회사소개</a>
+        <a href="business">사업영역</a>
         <a href="https://open.kakao.com/o/g5BavUph" target="_blank" class="btn-kakao">💬 오픈채널</a>
         <a href="https://zain0401.adminplus.co.kr/partner/login.html" target="_blank" class="btn-green">발주플랫폼</a>
     </div>
