--- a/business.html
+++ b/business.html
@@ -10,6 +10,15 @@
 
   gtag('config', 'AW-17853246592');
 </script>
+<!-- Event snippet for 페이지 조회 conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17853246592/qXW9COLG7OwbEIDZi8FC',
+      'value': 1.0,
+      'currency': 'KRW'
+  });
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사업영역 | GOZIP</title>
